# jupyter-notebook-translator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
example/: nb_en.ipynb  nb_es.ipynb
translate_notebook/: __main__.py  translator.py
